--- a/de.boetzmeyer.systemcontext/.classpath
+++ b/de.boetzmeyer.systemcontext/.classpath
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry exported="true" kind="lib" path="lib/de.boetzmeyer.systemmodel.jar"/>
+	<classpathentry kind="lib" path="test-lib/junit-4.10.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
