--- a/de.boetzmeyer.systemcontext/.classpath
+++ b/de.boetzmeyer.systemcontext/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry exported="true" kind="lib" path="lib/de.boetzmeyer.systemmodel.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/de.boetzmeyer.systemmodel.jar" sourcepath="/de.boetzmeyer.systemmodel"/>
 	<classpathentry kind="lib" path="test-lib/junit-4.10.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
